# hdrcam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
hdrcam_uvc/: CMakeLists.txt  README.md  etude_differences_time.r  graph_calibrate.R  testcal.txt
hdrcam_uvc/src/: Device_uvc.cpp  Device_uvc.hpp  HdrCam_Video.cpp  Hdrcam.cpp  Hdrcam2.cpp  Hdrcam_Test.cpp  PictureHdr.cpp  PictureHdr.hpp  Variables.hpp  caminfo_uvc.cpp  hdrcam_uvc.cpp  old.cpp
hdrcam_v4l/: CMakeLists.txt  README.md
hdrcam_v4l/src/: Chrono.hpp  cv.cpp  hdrcam_v4l.cpp
src/: hdrcam.cpp  main.cpp
